bitsandbytes/bits/tests/ui/group_out_of_order.stderr
error: group fields must be consecutive and in declared order; `a` does not immediately follow the previous group member in the struct body
 --> tests/ui/group_out_of_order.rs:3:22
  |
3 | #[wire(big, group(b, a => u8))]
  |                      ^

warning: unused import: `u4`
 --> tests/ui/group_out_of_order.rs:1:18
  |
1 | use bits::{wire, u4};
  |                  ^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
